--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,61 @@
+body {
+    font-family: "Roboto";
+    margin: 0;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     display: flex;
+    gap: 10px;
+}
+
+.header, .hero, .footer {
+    background-color: #1f2937;
 }
 
 .header {
-    background-color: #1f2937;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-bottom: 100px;
 }
 
-a {
+.footer, a, .hero-secondary-text {
     font-size: 18px;
     color: #e5e7eb;
 }
 
-img {
-    margin-left: 200px;
+.logo {
     width: 100px;
+    height: auto;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;    
+    align-items: center;
+}
+
+.hero-main-text {
+    font-size: 48px;
+    font-weight: 800;
+    color: #F9FAF8;
+}
+
+button {
+    background-color: #3882f6;
+    border-radius: 15px;
+}
+
+img {
+    width: 500px;
+    height: auto;
+}
+
+.hero {
+    display: flex;
 }
